# odt2braille

./: .classpath  .gitignore  .gitmodules  .project  Makefile  README.md  build-linux.properties  build-linux.xml  build-mac.properties  build-mac.xml  build-windows.properties  build-windows.xml  build.debian.properties  build.linux.properties  build.macosx.properties  build.properties  build.windows.properties  build.xml  buildoxt.macosx.properties  buildoxt.windows.properties  buildoxt.xml  catalog.xml  pom.xml  xml2brl.temp
addon/: Addons.xcu  description.xml  uno-extension-manifest.xml
codeblocks/liblouis/: liblouis.cbp
codeblocks/liblouisxml/: liblouisxml.cbp
codeblocks/xml2brl/: xml2brl.cbp
css/: pef.css
description/: desc_ca.txt  desc_cs.txt  desc_de.txt  desc_el.txt  desc_en.txt  desc_es.txt  desc_fr.txt  desc_it.txt  desc_nb.txt  desc_nl.txt  desc_pt-BR.txt  desc_sl.txt  desc_sv.txt
dialogs/: EmbossDialog.xdl  ExportDialog.xdl  InsertDialog.xdl  Interpoint55EmbossDialog.xdl  Interpoint55PrintDialog.xdl  PostTranslationDialog.xdl  PreviewDialog.xdl  PreviewDialog_en_US.properties  PrintDialog.xdl  SettingsDialog.xdl  SettingsDialog_ca.properties  SettingsDialog_de.properties  SettingsDialog_en.properties  SettingsDialog_es.properties  SettingsDialog_fr.properties  SettingsDialog_it.properties  SettingsDialog_nb.properties  SettingsDialog_nl.properties  SettingsDialog_pt.properties  SettingsDialog_sl.properties  SixKeyEntryDialog.xdl
doc/: NEWS  body.css  build.xml  compile.bat  copying.texi  make-javadoc.bat  odt2braille-ant-doc.odt  odt2braille-dev-doc.aux  odt2braille-dev-doc.bat  odt2braille-dev-doc.html  odt2braille-dev-doc.texi  odt2braille-dev-doc.toc  odt2braille-dev-doc.xml  odt2braille-user-doc.aux  odt2braille-user-doc.bat  odt2braille-user-doc.brf  odt2braille-user-doc.html  odt2braille-user-doc.odt  odt2braille-user-doc.pef  odt2braille-user-doc.setting  odt2braille-user-doc.texi  odt2braille-user-doc.toc  odt2braille-user-doc.xml  release-notes.txt  version.texi
doc/javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
ext/brailleutils/: README
ext/liblouis/: README
ext/liblouisxml/: README
ext/liblouisxml/src/branch_win_mac/doc/: Makefile.am  Makefile.in  copyright-notice  liblouisxml.html  liblouisxml.info  liblouisxml.texi  liblouisxml.txt  stamp-vti
ext/liblouisxml/src/branch_win_mac/lbx_files/: Makefile.am  Makefile.in  ThML.sem  Workbook.sem  article.sem  book.sem  canonical.cfg  default.cfg  doc.sem  document.sem  dtbook.sem  dtbook3.sem  gutbook.sem  html.sem  marburg.cfg  marburg.sem  math.sem  nemeth.sem  package.sem  preface.sem  set.sem  ukmaths.cfg  w_wordDocument.sem  wordDocument.sem
ext/liblouisxml/src/branch_win_mac/liblouisxml/: Makefile.am  Makefile.in  Makesemnames  README  change_table.c  config.h  config.h.in  examine_document.c  liblouisxml.c  liblouisxml.h  louisxml.h  louisxml.h.bak  makeContents.c  make_sem_names.c  paths.c  readconfig.c  readconfig.c.bak  sem_enum.h  sem_names.h  semantics.c  transcribe_cdataSection.c  transcribe_chemistry.c  transcribe_computerCode.c  transcribe_document.c  transcribe_graphic.c  transcribe_math.c  transcribe_music.c  transcribe_paragraph.c  transcribe_paragraph.c.bak  transcriber.c  transcriber.c.bak
ext/liblouisxml/src/branch_win_mac/man/: Makefile.am  Makefile.in
ext/liblouisxml/src/branch_win_mac/tests/: Makefile.am  Makefile.in  changetable.html  check_version.c  default.cfg  emphasis.xml  fracbinom.html  mathtest.sem  matrix1.html  matrix2.xml  pagebreak.html  quadratic.html  testcode.xml
ext/liblouisxml/src/branch_win_mac/tools/: Makefile.am  Makefile.in  lbx_devonly.c  msword2brl.in  pdf2brl.in  rtf2brl.in  xml2brl.c
extra/: localization.xls  odt2braille.css  pef.css
fonts/: odt2braille6.bak  odt2braille6.vfb  odt2braille8.bak  odt2braille8.vfb
l10n/: build.xml  localization.xls
liblouis/: versions.txt  xml2brl_build_instructions_mac.txt  xml2brl_build_instructions_win.txt
liblouis/files/: Nl-Nl-g1.utb  __ar-g1.ctb  __awa-g0.ctb  __bra-g0.ctb  __ca-g0.ctb  __ca-g1.ctb  __cs-g1.ctb  __da-g0.ctb  __da-g2.ctb  __de-CH-g0.ctb  __de-CH-g1.ctb  __de-CH-g2.ctb  __de-DE-g0.ctb  __de-DE-g1.ctb  __de-DE-g2.ctb  __dra-g0.ctb  __el-GR-g0.ctb  __el-es.ctb  __en-GB-g0.ctb  __en-GB-g1.ctb  __en-GB-g2.ctb  __en-UEB-g0.ctb  __en-UEB-g2.ctb  __en-UK-g0.ctb  __en-US-g2.ctb  __es-g1.ctb  __et-g0.ctb  __fr-BFU-g1-8d.ctb  __fr-BFU-g1.ctb  __fr-BFU-g2.ctb  __fr-CA-g1.ctb  __fr-CA-g2.ctb  (+159 more)
licenses/: build.xml  java-header.txt  xslt-header.txt
nbproject/: build-impl.xml  build-uno-impl.xml  genfiles.properties  project-uno.properties  project.properties  project.xml
odt2braille-addon/: pom.xml
odt2braille-anttask/: pom.xml
odt2braille-assembly/: pom.xml
odt2braille-core/: pom.xml
odt2braille-font/: pom.xml
odt2braille-liblouis/: pom.xml
src/: Addons.xcu  Paths.xcu  ProtocolHandler.xcu  description.xml  uno-extension-manifest.xml
templates/: groupuinames.xml
(+1740 files in other folders)
