lbx_filesdir = $(datadir)/liblouisxml/lbx_files

lbx_files_DATA = \
	doc.sem \
	marburg.cfg \
	marburg.sem \
	article.sem \
	book.sem \
	canonical.cfg \
	chapter.sem \
	default.cfg \
	document.sem \
	dtbook.sem \
	dtbook3.sem \
	gutbook.sem \
	html.sem \
	math.sem \
	nemeth.sem \
	package.sem \
	preface.sem \
	set.sem \
	ThML.sem \
	ukmaths.sem \
	ukmaths.cfg \
	wordDocument.sem \
	Workbook.sem \
	w_wordDocument.sem

EXTRA_DIST = \
	$(lbx_files_DATA)
